# src/static/swagger.json
@@ -196,6 +196,114 @@
           }
         }
       }
+    },
+    "/videos/{id}/blocked": {
+      "post": {
+        "tags": [
+          "videos"
+        ],
+        "summary": "Block video by id",
+        "description": "",
+        "operationId": "blockVideoById",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "minimum": 1
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Video blocked"
+          },
+          "404": {
+            "description": "Video not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "videos"
+        ],
+        "summary": "Unblock video by id",
+        "description": "",
+        "operationId": "unblockVideoById",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "minimum": 1
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Video unblocked"
+          },
+          "404": {
+            "description": "Video not found"
+          }
+        }
+      }
+    },
+    "/stats/historic_count": {
+      "get": {
+        "tags": [
+          "videos"
+        ],
+        "summary": "Get number of videos through time",
+        "description": "",
+        "operationId": "getHistoricCount",
+        "parameters": [
+          {
+            "$ref": "#/components/parameters/pathDate"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Num of videos uploaded in Media Server",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/HistoricCount"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/stats/visibility": {
+      "get": {
+        "tags": [
+          "videos"
+        ],
+        "summary": "Get number of videos according to its visibility",
+        "description": "",
+        "operationId": "getVisibility",
+        "responses": {
+          "200": {
+            "description": "Num of videos in Media Server",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Visibility"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -207,6 +315,14 @@
         "schema": {
           "type": "integer",
           "minimum": 1
+        }
+      },
+      "pathDate": {
+        "in": "query",
+        "name": "date",
+        "required": true,
+        "schema": {
+          "type": "string"
         }
       }
     },
@@ -315,6 +431,36 @@
           "visibility": {
             "type": "string",
             "example": "public"
+          }
+        }
+      },
+      "HistoricCount": {
+        "type": "object",
+        "properties": {
+          "date": {
+            "type": "string",
+            "example": "2020-07-20T23:57:40.420Z"
+          },
+          "count": {
+            "type": "integer",
+            "example": 20
+          }
+        }
+      },
+      "Visibility": {
+        "type": "object",
+        "properties": {
+          "public": {
+            "type": "integer",
+            "example": 1
+          },
+          "private": {
+            "type": "integer",
+            "example": 1
+          },
+          "blocked": {
+            "type": "integer",
+            "example": 2
           }
         }
       }
